Added the second collection
