# routes/index.js
@@ -1,5 +1,8 @@
 const router = require('express').Router();
 
+router.use('/api-docs', require('./swagger'));
+
 router.use('/music', require('./music'));
+router.use('/artists', require('./artists'));
 
 module.exports = router;
